docs: add Qwen3.8 example